--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   "bugs": {
     "url": "https://github.com/kumpmati/jsxpress/issues"
   },
+  "files": [
+    "dist/**/*"
+  ],
   "homepage": "https://github.com/kumpmati/jsxpress#readme",
   "devDependencies": {
     "@types/express": "^4.17.12",
