--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "jsxpress",
-  "version": "1.0.0",
-  "description": "jsx express thingy",
-  "main": "index.js",
+  "version": "0.0.1",
+  "description": "Write an express.js server using JSX",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
