--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ESNext",
     "module": "CommonJS",
     "lib": ["esnext"],
+    "declaration": true,
     "noImplicitAny": true,
     "removeComments": true,
     "preserveConstEnums": true,
@@ -12,8 +13,7 @@
     "strict": true,
     "baseUrl": "src",
     "outDir": "dist/",
-    "jsx": "react",
-    "jsxFactory": "h"
+    "jsx": "react-jsx"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules/*"]
