--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "strict": true,
     "baseUrl": "src",
     "outDir": "dist/",
-    "jsx": "react-jsx"
+    "jsx": "react",
+    "jsxFactory": "_jsx"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules/*"]
