--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jsxpress",
+  "name": "juicepress",
   "version": "0.0.1",
   "description": "Write an express.js server using JSX",
   "main": "dist/index.js",
