--- a/package.json
+++ b/package.json
@@ -26,17 +26,18 @@
     "url": "https://github.com/kumpmati/jsxpress/issues"
   },
   "files": [
-    "dist/**/*"
+    "dist/**/*",
+    "src/**/*"
   ],
   "homepage": "https://github.com/kumpmati/jsxpress#readme",
   "devDependencies": {
     "@types/node": "^15.6.1",
     "nodemon": "^2.0.7",
-    "ts-node": "^10.0.0",
-    "typescript": "^4.2.4"
+    "ts-node": "^10.0.0"
   },
   "peerDependencies": {
     "@types/express": "^4.17.12",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "typescript": "^4.2.4"
   }
 }
