--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "baseUrl": "src",
     "outDir": "dist/",
     "jsx": "react",
-    "jsxFactory": "Juice"
+    "jsxFactory": "Puu"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules/*"]
