--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "description": "Write express.js servers using JSX",
   "main": "dist/index.js",
   "scripts": {
-    "preinstall": "npm run build",
-    "build": "tsc",
     "start": "node dist/index.js",
+    "build": "tsc",
     "dev": "nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "npm run build"
+    "test": "echo \"no tests\" && exit 0",
+    "preinstall": "npm run build",
+    "prepublish": "npm run test && npm run lint",
+    "prepare": "npm run build",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "eslint . --ext .ts"
   },
+  "files": [
+    "lib"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kumpmati/jsxpress.git"
@@ -25,19 +31,19 @@
   "bugs": {
     "url": "https://github.com/kumpmati/jsxpress/issues"
   },
-  "files": [
-    "dist/**/*",
-    "src/**/*"
-  ],
   "homepage": "https://github.com/kumpmati/jsxpress#readme",
   "devDependencies": {
-    "@types/node": "^15.6.1",
-    "nodemon": "^2.0.7",
-    "ts-node": "^10.0.0"
-  },
-  "peerDependencies": {
     "@types/express": "^4.17.12",
-    "express": "^4.17.1",
+    "@types/node": "^15.6.1",
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/parser": "^4.25.0",
+    "eslint": "^7.27.0",
+    "nodemon": "^2.0.7",
+    "prettier": "^2.3.0",
+    "ts-node": "^10.0.0",
     "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
