--- a/package.json
+++ b/package.json
@@ -2,17 +2,19 @@
   "name": "puulvelin",
   "version": "0.0.1",
   "description": "Write express.js servers using JSX",
-  "main": "dist/index.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "start": "node dist/index.js",
     "build": "tsc",
-    "dev": "nodemon",
     "test": "echo \"no tests\" && exit 0",
-    "preinstall": "npm run build",
-    "prepublish": "npm run test && npm run lint",
-    "prepare": "npm run build",
     "format": "prettier --write \"src/**/*.ts\"",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "preinstall": "npm run build",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm run test && npm run lint",
+    "preversion": "npm run lint",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags"
   },
   "files": [
     "lib"
