--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "test": "echo \"no tests\" && exit 0",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint . --ext .ts",
-    "preinstall": "npm run build",
     "prepare": "npm run build",
     "prepublishOnly": "npm run test && npm run lint",
     "preversion": "npm run lint",
@@ -21,7 +20,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kumpmati/jsxpress.git"
+    "url": "git+https://github.com/kumpmati/puulvelin.git"
   },
   "keywords": [
     "jsx",
@@ -31,9 +30,9 @@
   "author": "kumpmati",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/kumpmati/jsxpress/issues"
+    "url": "https://github.com/kumpmati/puulvelin/issues"
   },
-  "homepage": "https://github.com/kumpmati/jsxpress#readme",
+  "homepage": "https://github.com/kumpmati/puulvelin#readme",
   "devDependencies": {
     "@types/express": "^4.17.12",
     "@types/node": "^15.6.1",
