--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "@types/express": "^4.17.12",
+    "@types/express": "^4.17.12"
+  },
+  "peerDependencies": {
     "express": "^4.17.1"
   }
 }
