--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "treexpress",
   "version": "0.0.9",
   "description": "Write express.js servers using JSX",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
+    "start": "node dist/test.js",
     "build": "tsc",
     "test": "echo \"no tests\" && exit 0",
     "format": "prettier --write \"src/**/*.ts\"",
@@ -44,9 +45,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "@types/express": "^4.17.12"
-  },
-  "peerDependencies": {
+    "@types/express": "^4.17.12",
     "express": "^4.17.1"
   }
 }
