--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,7 @@
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended"
   ],
-  "ignorePatterns": "lib/*",
+  "ignorePatterns": "dist/*",
   "rules": {
     "no-console": "warn"
   }
