--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,5 @@
     "jsxFactory": "T.createElement"
   },
   "include": ["src"],
-  "exclude": ["node_modules", "lib"]
+  "exclude": ["node_modules", "dist"]
 }
