--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "treexpress",
   "version": "0.1.3",
   "description": "Write express.js servers using JSX",
-  "main": "dist/lib/index.js",
-  "types": "dist/lib/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "start": "node dist/test.js",
     "build": "tsc",
@@ -17,7 +17,8 @@
     "postversion": "git push && git push --tags"
   },
   "files": [
-    "dist"
+    "dist",
+    "dist/builtin"
   ],
   "repository": {
     "type": "git",
