--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "baseUrl": "src",
     "outDir": "./dist",
     "jsx": "react",
-    "jsxFactory": "T.createElement"
+    "jsxFactory": "T"
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
